# Homework9.2.2

./: CMakeLists.txt  main.cpp
